@@ -22,13 +22,13 @@
 #
 AC_PREREQ([2.60])
 LT_PREREQ([2.4.0])
-AC_INIT([libmicrohttpd],[0.9.44],[libmicrohttpd@gnu.org])
+AC_INIT([libmicrohttpd],[0.9.46],[libmicrohttpd@gnu.org])
 AM_INIT_AUTOMAKE([silent-rules] [subdir-objects])
 AC_CONFIG_HEADERS([MHD_config.h])
 AC_CONFIG_MACRO_DIR([m4])
 AH_TOP([#define _GNU_SOURCE  1])
 
-LIB_VERSION_CURRENT=44
+LIB_VERSION_CURRENT=46
 LIB_VERSION_REVISION=0
 LIB_VERSION_AGE=34
 AC_SUBST(LIB_VERSION_CURRENT)
